// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardComponent when using Dark Theme should match snapshot with alert class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0f1535;
  border: 0.0625rem solid #21497d;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Dark Theme should match snapshot with success class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0f1535;
  border: 0.0625rem solid #21497d;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 success"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Dark Theme should match snapshot with warning class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0f1535;
  border: 0.0625rem solid #21497d;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 warning"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Dark Theme should match snapshot without any class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0f1535;
  border: 0.0625rem solid #21497d;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Light Theme should match snapshot with alert class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #fff;
  border: 0.0625rem solid #e0e0e0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Light Theme should match snapshot with success class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #fff;
  border: 0.0625rem solid #e0e0e0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 success"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Light Theme should match snapshot with warning class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #fff;
  border: 0.0625rem solid #e0e0e0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 warning"
  />
</DocumentFragment>
`;

exports[`CardComponent when using Light Theme should match snapshot without any class 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #fff;
  border: 0.0625rem solid #e0e0e0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #e80000;
  border-color: #e80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #f7a300;
  border-color: #f7a300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
